# nullbyte-directive

./: .gitignore  .prettierignore  AGENTS.md  Cargo.toml  Makefile  README.md  package-lock.json  package.json
.cargo/: config.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  coverage.yml  determinism.yml  traceability-gate.yml
apps/debug-tool/: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
apps/debug-tool/public/: emulator.wasm
apps/debug-tool/src/: App.svelte  app.css
apps/debug-tool/src/lib/components/: DisassemblyView.svelte  LogView.svelte  MemoryView.svelte  RegisterView.svelte  Tele7View.svelte
crates/assembler/: AGENTS.md  Cargo.toml
crates/assembler/src/: assembler.rs  encoder.rs  errors.rs  include.rs  lib.rs  main.rs  mnemonic.rs  parser.rs  source.rs  symbols.rs  test_format.rs  test_runner.rs
crates/assembler/tests/: cli_integration.rs
crates/emulator-core/: AGENTS.md  Cargo.toml  README.md
crates/emulator-core/examples/: determinism_fingerprint.rs  performance_harness.rs
crates/emulator-core/fuzz/: Cargo.toml
crates/emulator-core/fuzz/fuzz_targets/: decode_execute_memory.rs
crates/emulator-core/src/: api.rs  decoder.rs  diag.rs  disasm.rs  encoding.rs  fault.rs  lib.rs  timing.rs
crates/emulator-core/src/execute/: flags.rs  helpers.rs  mod.rs
crates/emulator-core/src/memory/: access.rs  map.rs  mod.rs
crates/emulator-core/src/peripherals/: mod.rs  tele7.rs
crates/emulator-core/src/state/: mod.rs  registers.rs  run_state.rs
crates/emulator-core/tests/: fr10_reset_boot.rs  isa_conformance.rs  phase11_suite.rs  phase12_suite.rs  phase14_suite.rs
crates/emulator-core/tests/isa/: alu.n1.md  atomic.n1.md  branch.n1.md  control.n1.md  data_movement.n1.md  event.n1.md  math.n1.md  mmio.n1.md  stack.n1.md
crates/emulator-wasm/: Cargo.toml
crates/emulator-wasm/src/: lib.rs
docs/: AGENTS.md
docs/design/: canon-rules.md  narrative-writing-guide.md  technical-writing-guide.md
docs/design/technical/: nullbyte-one.md
docs/design/world/: factions.md
docs/emulator/: assembler-prd.md  debug-tool-prd.md  emulator-core-prd.md  emulator-core-v0.1.0-release-notes.md  requirement-matrix.md  snapshot-versioning-policy.md  spec-clarifications.md
docs/in-game/canon/: doctrine.md  gameplay-pillars.md  timeline.md
docs/in-game/technical/compute/: compute-constraints.md  nullbyte-one-core.md  nullbyte-one-core.txt  tele-7.md  tele-7.txt
programs/: blinker.n1.md  game_of_life.n1.md  tele7_directives_demo.n1.md  tele7_self_test.n1.md  teletext_news.n1.md
