[package]
name = "emulator-core"
version = "0.1.0"
edition = "2021"
description = "Core emulator for Nullbyte Directive"
license = "MIT"
publish = false

[lib]
path = "src/lib.rs"

[features]
default = []
serde = ["dep:serde"]

[dependencies]
thiserror = "2.0.12"
serde = { version = "1.0.219", features = ["derive"], optional = true }

[dev-dependencies]
proptest = "1.6.0"
rstest = "0.25.0"

[package.metadata.tooling]
fuzz_harness = "TODO"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"
rust_2018_idioms = { level = "deny", priority = -1 }
unused_crate_dependencies = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
