[package]
name = "emulator-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly bindings for the Nullbyte Directive emulator core"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
console_error_panic_hook = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[dependencies.emulator-core]
path = "../emulator-core"
features = ["serde"]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[lints.rust]
unsafe_code = "warn"
missing_docs = "allow"
rust_2018_idioms = { level = "deny", priority = -1 }
unused_crate_dependencies = "allow"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
