[package]
name = "emulator-core-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
emulator-core = { path = ".." }

[[bin]]
name = "decode_execute_memory"
path = "fuzz_targets/decode_execute_memory.rs"
test = false
doc = false
bench = false

[workspace]
members = []
